# reject

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
docs/: Makefile  conf.py  develop_code.ipynb  example.ipynb  index.md  make.bat
docs/guide/: classification_rejection.ipynb  diversity_quality_score.ipynb
reject/: __init__.py  constant.py  diversity.py  reject.py  uncertainty.py  utils.py
tests/: test_diversity.py  test_reject.py  test_uncertainty.py  test_utils.py
