[tool.poetry]
name = "reject"
version = "0.3.2"
description = "Classification with rejection in Python."
authors = ["Arthur Thuy"]
maintainers = ["Arthur Thuy <arthur.thuy@telenet.be>"]
license = "Apache License 2.0"
repository = "https://github.com/arthur-thuy/reject"
documentation = "https://reject.readthedocs.io"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
jupyter = "^1.0.0"
myst-nb = {version = "^1.0.0", python = "^3.9"}
sphinx-autoapi = "^3.0.0"
sphinx-rtd-theme = "^2.0.0"
mypy = "^1.8.0"
pre-commit = "^3.6.2"
isort = "^5.13.2"
flake8-bugbear = "^24.2.6"
pydocstyle = "^6.3.0"
flake8-docstrings = "^1.7.0"
flake8-implicit-str-concat = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "project" # needed for pytest to find reject module

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["scipy.stats.*", "scipy.special.*"]
ignore_missing_imports = true
